system/authelia/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.bapttf.com`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
  tls: {}
